# Academic-project-Oussama-karim

./: .gitignore  CMakeLists.txt  build_output.txt
Model/: Node.cpp  Permission.h
model/: DirectoryNode.cpp  DirectoryNode.h  DiskManager.cpp  DiskManager.h  FileLock.cpp  FileLock.h  FileNode.cpp  FileNode.h  FileSystem.cpp  FileSystem.h  Group.cpp  Group.h  HardLink.cpp  HardLink.h  Journal.cpp  Journal.h  Node.h  PathParser.cpp  PathParser.h  Permission.cpp  Quota.cpp  Quota.h  SearchEngine.cpp  SearchEngine.h  Snapshot.cpp  Snapshot.h  SymLink.cpp  SymLink.h  Trash.cpp  Trash.h  User.cpp  User.h
